2005-12-13  Adele Peterson  <adele@apple.com>

        Reviewed by Maciej.

        Test case for http://bugzilla.opendarwin.org/show_bug.cgi?id=5465
        REGRESSION: check box onchange event doesn't fire (radio buttons do not get disabled in Bugzilla)

        * fast/forms/checkbox-radio-onchange-expected.checksum: Added.
        * fast/forms/checkbox-radio-onchange-expected.png: Added.
        * fast/forms/checkbox-radio-onchange-expected.txt: Added.
        * fast/forms/checkbox-radio-onchange.html: Added.

2005-12-13  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Hyatt.

        Test case for our CSS shorthand serialization.

        * fast/dom/css-shortHands-expected.checksum: Added.
        * fast/dom/css-shortHands-expected.png: Added.
        * fast/dom/css-shortHands-expected.txt: Added.
        * fast/dom/css-shortHands.html: Added.

2005-12-13  Anders Carlsson  <andersca@mac.com>

        Reviewed by Darin.

        - Add test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6041
        Support property getters and setters.
        
        * fast/js/property-getters-and-setters-expected.txt: Added.
        * fast/js/property-getters-and-setters.html: Added.

        * ChangeLog: Add titles for the bugzilla urls.
        
2005-12-13  Eric Seidel  <eseidel@apple.com>

        Reviewed by darin.

        3 tests checking expected behavior for bad transform.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6061

        * svg/custom/transform-ignore-after-invalid-expected.checksum: Added.
        * svg/custom/transform-ignore-after-invalid-expected.png: Added.
        * svg/custom/transform-ignore-after-invalid-expected.txt: Added.
        * svg/custom/transform-ignore-after-invalid.svg: Added.
        * svg/custom/transform-invalid-expected.checksum: Added.
        * svg/custom/transform-invalid-expected.png: Added.
        * svg/custom/transform-invalid-expected.txt: Added.
        * svg/custom/transform-invalid.svg: Added.