@@ -1,0 +1,27 @@
+EDITING DELEGATE: shouldChangeSelectedDOMRange:(null) toDOMRange:range from 40 of #text > DIV > BODY > HTML > #document to 40 of #text > DIV > BODY > HTML > #document affinity:NSSelectionAffinityDownstream stillSelecting:FALSE
+EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (0,0) size 800x584
+      RenderBlock {HR} at (0,41) size 800x2 [border: (1px inset #000000)]
+      RenderBlock {P} at (0,59) size 800x54
+        RenderText {TEXT} at (0,0) size 207x18
+          text run at (0,0) width 207: "This tests for regressions against "
+        RenderInline {I} at (0,0) size 789x36
+          RenderText {TEXT} at (207,0) size 789x36
+            text run at (207,0) width 448: "http://bugzilla.opendarwin.org/show_bug.cgi?id=5921 Hit-testing text "
+            text run at (655,0) width 134: "in overflows does not"
+            text run at (0,18) width 167: "take scrolling into account"
+        RenderText {TEXT} at (167,18) size 765x36
+          text run at (167,18) width 82: " by scrolling "
+          text run at (249,18) width 409: "the above text all the way to the right, clicking the last letter, and "
+          text run at (658,18) width 107: "verifying that the"
+          text run at (0,36) width 291: "correct caret position is reported to the editing "
+          text run at (291,36) width 56: "delegate."
+layer at (0,0) size 210x33 clip at (0,0) size 210x18 scrollX 33 scrollWidth 243
+  RenderBlock {DIV} at (0,0) size 210x33
+    RenderText {TEXT} at (0,0) size 243x18
+      text run at (0,0) width 243: "Seals and caribou live in the arctic, too"
+caret: position 40 of child 0 {TEXT} of child 1 {DIV} of child 1 {BODY} of child 0 {HTML} of document
